--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,36 +1,26 @@
-# This is a basic workflow to help you get started with Actions
+name: Tex-Compiler
 
-name: CI
-
-# Controls when the workflow will run
 on:
-  # Triggers the workflow on push or pull request events but only for the "main" branch
   push:
-    branches: [ "main" ]
-  pull_request:
-    branches: [ "main" ]
-
-  # Allows you to run this workflow manually from the Actions tab
+    branches: [main]
   workflow_dispatch:
 
-# A workflow run is made up of one or more jobs that can run sequentially or in parallel
 jobs:
-  # This workflow contains a single job called "build"
-  build:
-    # The type of runner that the job will run on
+  compile:
     runs-on: ubuntu-latest
-
-    # Steps represent a sequence of tasks that will be executed as part of the job
+    name: CV Tex Compiler
     steps:
-      # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
-      - uses: actions/checkout@v3
-
-      # Runs a single command using the runners shell
-      - name: Run a one-line script
-        run: echo Hello, world!
-
-      # Runs a set of commands using the runners shell
-      - name: Run a multi-line script
+      - name: Check out code
+        uses: actions/checkout@v2
+      - name: Build docker images
+        run: docker build -t local -f  Dockerfile .
+      - name: Run tests
+        run: docker run -v ${PWD}:/working_dir local
+    
+      - name: Commit changes
         run: |
-          echo Add other actions to build,
-          echo test, and deploy your project.
+          git config --global user.name 'CV Tex Compiler'
+          git config --global user.email 'noreply@users.noreply.github.com'
+          git add cv.pdf
+          git commit -am "Updated CV automatically"
+          git push
